# tree-sitter-julia

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-julia.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_julia/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJulia/: julia.h
bindings/swift/TreeSitterJuliaTests/: TreeSitterJuliaTests.swift
corpus/: definitions.txt  expressions.txt
queries/: README.md  highlights.scm  locals.scm
script/: known-failures.txt
src/: binding.cc  grammar.json  node-types.json  scanner.c
src/tree_sitter/: parser.h
test/corpus/: collections.txt  definitions.txt  expressions.txt  literals.txt  macros.txt  operators.txt  primary.txt  statements.txt
